src/infra/k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: snisid-core
  labels:
    app: identity-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: identity-service
        image: harbor.snisid.ht/core/identity-service:1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: snisid-core
spec:
  selector:
    app: identity-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
